[ci] add clang-tidy to github actions
This gives us nice annotations. See
https://github.com/suo/pytorch/pull/22/files for an approximation of
what it will look like (ignore the warnings on the lint.yml file).

I deleted the old azure pipelines one since making the code work for
both was annoying, and unlike flake8 this one does not affect master

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,3 +46,89 @@ jobs:
           regex: '^(?<filename>.*?):(?<lineNumber>\d+):(?<columnNumber>\d+): (?<errorCode>\w\d+) (?<errorDesc>.*)'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  clang-tidy:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7.4
+          architecture: x64
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
+      - name: Checkout PR tip
+        run: |
+          set -eux
+          git checkout ${GITHUB_HEAD_REF}
+          echo ::set-output name=commit_sha::$(git rev-parse ${GITHUB_HEAD_REF})
+        id: get_pr_tip
+      - name: Install dependencies
+        run: |
+          set -eux
+          # Install dependencies
+          pip install pyyaml
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main"
+          sudo apt-get update
+          sudo apt-get install -y clang-tidy-8
+          sudo update-alternatives --install /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-8 1000
+      - name: Run clang-tidy
+        run: |
+          set -eux
+          BASE_BRANCH=master
+          if [[ $PR_TARGET ]]; then
+            git remote add upstream https://github.com/pytorch/pytorch
+            git fetch upstream "$PR_TARGET"
+            BASE_BRANCH="upstream/$PR_TARGET"
+          fi
+
+          if [[ ! -d build ]]; then
+            git submodule update --init --recursive
+
+            mkdir build
+            pushd build
+            # We really only need compile_commands.json, so no need to build!
+            time cmake ..
+            popd
+
+            # Generate ATen files.
+            time python aten/src/ATen/gen.py \
+              -s aten/src/ATen \
+              -d build/aten/src/ATen \
+              aten/src/ATen/Declarations.cwrap \
+              aten/src/THNN/generic/THNN.h \
+              aten/src/THCUNN/generic/THCUNN.h \
+              aten/src/ATen/nn.yaml \
+              aten/src/ATen/native/native_functions.yaml
+
+            # Generate PyTorch files.
+            time python tools/setup_helpers/generate_code.py            \
+              --declarations-path build/aten/src/ATen/Declarations.yaml \
+              --nn-path aten/src
+          fi
+
+          # Run Clang-Tidy
+          # The negative filters below are to exclude files that include onnx_pb.h or
+          # caffe2_pb.h, otherwise we'd have to build protos as part of this CI job.
+          python tools/clang_tidy.py                  \
+            --paths torch/csrc/                       \
+            --diff "$BASE_BRANCH"                     \
+            -g"-torch/csrc/jit/export.cpp"            \
+            -g"-torch/csrc/jit/import.cpp"            \
+            -g"-torch/csrc/jit/netdef_converter.cpp"  \
+            "$@" > ${GITHUB_WORKSPACE}/clang-tidy-output.txt
+
+          cat ${GITHUB_WORKSPACE}/clang-tidy-output.txt
+        env:
+          PR_TARGET: ${{ github.base_ref }}
+      - name: Add annotations
+        uses: suo/add-annotations-github-action@master
+        with:
+          check_name: 'clang-tidy'
+          linter_output_path: 'clang-tidy-output.txt'
+          commit_sha: ${{ steps.get_pr_tip.outputs.commit_sha }}
+          regex: '^(?<filename>.*?):(?<lineNumber>\d+):(?<columnNumber>\d+): (?<errorDesc>.*?) (?<errorCode>\[.*\])'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
