Update on "[ci] port the rest of the linters over to github actions"

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           python-version: 3.7.4
           architecture: x64
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: Ensure consistent CircleCI YAML config
         run: |
           pip install -r requirements.txt
@@ -28,12 +30,16 @@ jobs:
         with:
           python-version: 3.7.4
           architecture: x64
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: Ensure Docker version is correctly deployed
         run: .circleci/validate-docker-version.py
 
   shellcheck-jenkins:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: Shellcheck Jenkins scripts
         run: |
           sudo apt-get install -y shellcheck
@@ -42,6 +48,8 @@ jobs:
   ensure-no-tabs:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: Ensure no tabs
         run: |
           (! git grep -I -l $'\t' -- . ':(exclude)*.svg' ':(exclude)**Makefile' ':(exclude)**/contrib/**' ':(exclude)third_party' ':(exclude).gitattributes' ':(exclude).gitmodules' || (echo "The above files have tabs; please convert them to spaces"; false))
@@ -49,6 +57,8 @@ jobs:
   ensure-not-executable:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: Ensure C++ source files are not executable
         run: |
           (! find . \( -path ./third_party -o -path ./.git -o -path ./torch/bin -o -path ./build \) -prune -o -type f -executable -regextype posix-egrep -not -regex '.+(\.(bash|sh|py|so)|git-pre-commit)$' -print | grep . || (echo 'The above files have executable permission; please remove their executable permission by using `chmod -x`'; false))
@@ -61,6 +71,8 @@ jobs:
         with:
           python-version: 3.7.4
           architecture: x64
+      - name: Checkout PyTorch
+        uses: actions/checkout@master
       - name: MyPy typecheck
         run: |
           pip install mypy mypy-extensions
