--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -147,6 +147,7 @@ jobs:
         run: |
           set -eux
           echo ${{ github.event.pull_request.head.sha }}
+          echo ${{ github.event.push.head.sha }}
           if [ -z "${GITHUB_HEAD_REF}" ]; then
             # We are on master, just set the SHA from our current location
             echo ::set-output name=commit_sha::${GITHUB_SHA}
