--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -106,16 +106,12 @@ jobs:
       - name: Checkout PR tip
         run: |
           set -eux
-          if [ -z "${GITHUB_HEAD_REF}" ]; then
-            # We are on master, just set the SHA from our current location
-            echo ::set-output name=commit_sha::${GITHUB_SHA}
-          else
-            # We are on a PR, so actions/checkout leaves us on merge commit.
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            # We are on a PR, so actions/checkout leaves us on a merge commit.
             # Check out the actual tip of the branch.
-            PR_TIP=$(git rev-parse HEAD^2)
-            git checkout ${PR_TIP}
-            echo ::set-output name=commit_sha::${PR_TIP}
+            git checkout ${{ github.event.pull_request.head.sha }}
           fi
+          echo ::set-output name=commit_sha::$(git rev-parse HEAD)
         id: get_pr_tip
       - name: Run flake8
         run: |
@@ -146,16 +142,12 @@ jobs:
       - name: Checkout PR tip
         run: |
           set -eux
-          if [ -z "${GITHUB_HEAD_REF}" ]; then
-            # We are on master, just set the SHA from our current location
-            echo ::set-output name=commit_sha::${GITHUB_SHA}
-          else
-            # We are on a PR, so actions/checkout leaves us on merge commit.
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            # We are on a PR, so actions/checkout leaves us on a merge commit.
             # Check out the actual tip of the branch.
-            PR_TIP=$(git rev-parse HEAD^2)
-            git checkout ${PR_TIP}
-            echo ::set-output name=commit_sha::${PR_TIP}
+            git checkout ${{ github.event.pull_request.head.sha }}
           fi
+          echo ::set-output name=commit_sha::$(git rev-parse HEAD)
         id: get_pr_tip
       - name: Run flake8
         run: |
@@ -189,16 +181,12 @@ jobs:
       - name: Checkout PR tip
         run: |
           set -eux
-          if [ -z "${GITHUB_HEAD_REF}" ]; then
-            # We are on master, just set the SHA from our current location
-            echo ::set-output name=commit_sha::${GITHUB_SHA}
-          else
-            # We are on a PR, so actions/checkout leaves us on merge commit.
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            # We are on a PR, so actions/checkout leaves us on a merge commit.
             # Check out the actual tip of the branch.
-            PR_TIP=$(git rev-parse HEAD^2)
-            git checkout ${PR_TIP}
-            echo ::set-output name=commit_sha::${PR_TIP}
+            git checkout ${{ github.event.pull_request.head.sha }}
           fi
+          echo ::set-output name=commit_sha::$(git rev-parse HEAD)
         id: get_pr_tip
       - name: Install dependencies
         run: |
