--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1818,7 +1818,7 @@ workflows:
           build_environment: "pytorch-linux-xenial-cuda10-cudnn7-py3-gcc7-build"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10-cudnn7-py3-gcc7:347"
       - pytorch_linux_build:
-          name: pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_build
+          name: pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_cuda_memcheck_build
           requires:
             - setup
           filters:
@@ -1826,34 +1826,20 @@ workflows:
               only:
                 - master
                 - /ci-all\/.*/
-          build_environment: "pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-build"
-          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7:347"
+          build_environment: "pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-cuda_memcheck-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-cuda_memcheck:347"
       - pytorch_linux_test:
-          name: pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_test
+          name: pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_cuda_memcheck_test
           requires:
             - setup
-            - pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_build
+            - pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_cuda_memcheck_build
           filters:
             branches:
               only:
                 - master
                 - /ci-all\/.*/
-          build_environment: "pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-test"
-          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7:347"
-          use_cuda_docker_runtime: "1"
-          resource_class: gpu.medium
-      - pytorch_linux_test:
-          name: pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_test_cuda_memcheck
-          requires:
-            - setup
-            - pytorch_linux_xenial_cuda10_1_cudnn7_py3_gcc7_build
-          filters:
-            branches:
-              only:
-                - master
-                - /ci-all\/.*/
-          build_environment: "pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-test"
-          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7:347"
+          build_environment: "pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-cuda_memcheck-test"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-cuda10.1-cudnn7-py3-gcc7-cuda_memcheck:347"
           use_cuda_docker_runtime: "1"
           resource_class: gpu.medium
       - pytorch_linux_build:
