--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5952,6 +5952,9 @@ workflows:
           name: "docker-pytorch-linux-bionic-cuda10.2-cudnn7-py3.8-gcc9"
           image_name: "pytorch-linux-bionic-cuda10.2-cudnn7-py3.8-gcc9"
       - docker_build_job:
+          name: "docker-pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+          image_name: "pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+      - docker_build_job:
           name: "docker-pytorch-linux-bionic-py3.6-clang9"
           image_name: "pytorch-linux-bionic-py3.6-clang9"
       - docker_build_job:
@@ -6389,6 +6392,28 @@ workflows:
           build_environment: "pytorch-vulkan-linux-bionic-py3.6-clang9-test"
           docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-py3.6-clang9"
           resource_class: large
+      - pytorch_linux_build:
+          name: pytorch_linux_bionic_cuda10_2_cudnn7_py3_9_gcc9_build
+          requires:
+            - "docker-pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+          build_environment: "pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9-build"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+      - pytorch_linux_test:
+          name: pytorch_linux_bionic_cuda10_2_cudnn7_py3_9_gcc9_test1
+          requires:
+            - pytorch_linux_bionic_cuda10_2_cudnn7_py3_9_gcc9_build
+          build_environment: "pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9-test1"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+          use_cuda_docker_runtime: "1"
+          resource_class: gpu.medium
+      - pytorch_linux_test:
+          name: pytorch_linux_bionic_cuda10_2_cudnn7_py3_9_gcc9_test2
+          requires:
+            - pytorch_linux_bionic_cuda10_2_cudnn7_py3_9_gcc9_build
+          build_environment: "pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9-test2"
+          docker_image: "308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-cuda10.2-cudnn7-py3.9-gcc9"
+          use_cuda_docker_runtime: "1"
+          resource_class: gpu.medium
       - pytorch_linux_build:
           name: pytorch_linux_bionic_py3_8_gcc9_coverage_build
           requires:
