--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -330,14 +330,27 @@
 
 # For clamp, gradient is not defined at the boundaries. But empirically it's helpful
 # to be able to get gradient on min and max, so we return the subgradient 1 for these cases.
+- name: clamp.Tensor(Tensor self, Tensor? min=None, Tensor? max=None) -> Tensor
+  self: clamp_backward(grad, self, min, max)
+  min: grad * (self < min).to(grad.dtype())
+  max: grad * (self > max).to(grad.dtype())
+
 - name: clamp(Tensor self, Scalar? min=None, Scalar? max=None) -> Tensor
   self: clamp_backward(grad, self, min, max)
 
 - name: clamp_min(Tensor self, Scalar min) -> Tensor
   self: grad * (self >= min).to(grad.dtype())
 
+- name: clamp_min.Tensor(Tensor self, Tensor min) -> Tensor
+  self: grad * (self >= min).to(grad.dtype())
+  min: grad * (self < min).to(grad.dtype())
+
 - name: clamp_max(Tensor self, Scalar max) -> Tensor
   self: grad * (self <= max).to(grad.dtype())
+
+- name: clamp_max.Tensor(Tensor self, Tensor max) -> Tensor
+  self: grad * (self <= max).to(grad.dtype())
+  max: grad * (self > max).to(grad.dtype())
 
 - name: clone(Tensor self, *, MemoryFormat? memory_format=None) -> Tensor
   self: grad
